// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stateful async tests Merges skipped validations from previous suite 1`] = `
{
  "done": [Function],
  "errorCount": 1,
  "errors": [
    {
      "fieldName": "field_1",
      "groupName": undefined,
      "message": "field_message_1",
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {
    "group": {
      "field_1": {
        "errorCount": 0,
        "errors": [],
        "testCount": 0,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "field_4": {
        "errorCount": 0,
        "errors": [],
        "testCount": 0,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
    },
  },
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "suiteName": undefined,
  "testCount": 3,
  "tests": {
    "field_1": {
      "errorCount": 1,
      "errors": [
        "field_message_1",
      ],
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_2": {
      "errorCount": 0,
      "errors": [],
      "testCount": 2,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_3": {
      "errorCount": 0,
      "errors": [],
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_4": {
      "errorCount": 0,
      "errors": [],
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "valid": false,
  "warnCount": 0,
  "warnings": [
    {
      "fieldName": "field_1",
      "groupName": undefined,
      "message": "field_message_1",
    },
  ],
}
`;

exports[`Stateful async tests Merges skipped validations from previous suite 2`] = `
{
  "errorCount": 2,
  "errors": [
    {
      "fieldName": "field_1",
      "groupName": undefined,
      "message": "field_message_1",
    },
    {
      "fieldName": "field_2",
      "groupName": undefined,
      "message": "rejection_message_1",
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {
    "group": {
      "field_1": {
        "errorCount": 0,
        "errors": [],
        "testCount": 0,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "field_4": {
        "errorCount": 0,
        "errors": [],
        "testCount": 0,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
    },
  },
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "suiteName": undefined,
  "testCount": 3,
  "tests": {
    "field_1": {
      "errorCount": 1,
      "errors": [
        "field_message_1",
      ],
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_2": {
      "errorCount": 1,
      "errors": [
        "rejection_message_1",
      ],
      "testCount": 2,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_3": {
      "errorCount": 0,
      "errors": [],
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_4": {
      "errorCount": 0,
      "errors": [],
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "valid": false,
  "warnCount": 0,
  "warnings": [
    {
      "fieldName": "field_1",
      "groupName": undefined,
      "message": "field_message_1",
    },
    {
      "fieldName": "field_2",
      "groupName": undefined,
      "message": "rejection_message_1",
    },
  ],
}
`;

exports[`Stateful async tests Merges skipped validations from previous suite 3`] = `
{
  "errorCount": 5,
  "errors": [
    {
      "fieldName": "field_1",
      "groupName": "group",
      "message": "field_1_group_message",
    },
    {
      "fieldName": "field_4",
      "groupName": "group",
      "message": "field_4_group_message",
    },
    {
      "fieldName": "field_1",
      "groupName": undefined,
      "message": "field_message_1",
    },
    {
      "fieldName": "field_2",
      "groupName": undefined,
      "message": "rejection_message_1",
    },
    {
      "fieldName": "field_3",
      "groupName": undefined,
      "message": "field_message_3",
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {
    "group": {
      "field_1": {
        "errorCount": 1,
        "errors": [
          "field_1_group_message",
        ],
        "testCount": 1,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "field_4": {
        "errorCount": 1,
        "errors": [
          "field_4_group_message",
        ],
        "testCount": 1,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
    },
  },
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "suiteName": undefined,
  "testCount": 7,
  "tests": {
    "field_1": {
      "errorCount": 2,
      "errors": [
        "field_1_group_message",
        "field_message_1",
      ],
      "testCount": 2,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_2": {
      "errorCount": 1,
      "errors": [
        "rejection_message_1",
      ],
      "testCount": 2,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_3": {
      "errorCount": 1,
      "errors": [
        "field_message_3",
      ],
      "testCount": 2,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_4": {
      "errorCount": 1,
      "errors": [
        "field_4_group_message",
      ],
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "valid": false,
  "warnCount": 0,
  "warnings": [
    {
      "fieldName": "field_1",
      "groupName": "group",
      "message": "field_1_group_message",
    },
    {
      "fieldName": "field_4",
      "groupName": "group",
      "message": "field_4_group_message",
    },
    {
      "fieldName": "field_1",
      "groupName": undefined,
      "message": "field_message_1",
    },
    {
      "fieldName": "field_2",
      "groupName": undefined,
      "message": "rejection_message_1",
    },
    {
      "fieldName": "field_3",
      "groupName": undefined,
      "message": "field_message_3",
    },
  ],
}
`;
